@@ -1,8 +1,11 @@
 package org.zeorck.likelionboard.domain.board.application;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.zeorck.likelionboard.common.response.PageableResponse;
 import org.zeorck.likelionboard.domain.board.domain.Board;
 import org.zeorck.likelionboard.domain.board.infrastructure.BoardRepository;
 import org.zeorck.likelionboard.domain.board.presentation.exception.BoardDeleteForbidden;
@@ -14,7 +17,6 @@ import org.zeorck.likelionboard.domain.member.application.MemberService;
 import org.zeorck.likelionboard.domain.member.domain.Member;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -58,10 +60,14 @@ public class BoardService {
     }
 
     @Transactional(readOnly = true)
-    public List<BoardInfoResponse> getBoards() {
-        return boardRepository.findAll().stream()
+    public PageableResponse<BoardInfoResponse> getBoards(Pageable pageable) {
+        Page<Board> boardPage = boardRepository.findAll(pageable);
+
+        List<BoardInfoResponse> boardResponses = boardPage.getContent().stream()
                 .map(BoardInfoResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+
+        return PageableResponse.of(pageable, boardResponses);
     }
 
     private void validateUpdateForbidden(Board board, Member member) {
